--- a/TCC/produtos.html
+++ b/TCC/produtos.html
@@ -59,9 +59,9 @@
     }
 
     body {
-  background-image: url('ANGEL SOZINHO.png');
+  background-image: url('ANGELSOZINHO.jpg');
   background-repeat: repeat;
-  background-size: 100px;
+  background-size: 250px;
   background-attachment: fixed;
   background-position: center;
 }
